[project]
name = "memory-db"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llist (>=0.7.1,<0.8.0)"
]

[tool.poetry]
packages = [{include = "memory_db", from = "src"}]


[[tool.poetry.source]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple"
priority = "primary"


[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
